// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`queries list 1`] = `
"query {
	authors: listAuthor {
		id
		name
		email
	}
}
"
`;

exports[`queries multiple queries 1`] = `
"query {
	authors: listAuthor {
		id
		name
		email
	}
	posts: listPost {
		id
		publishedAt
		status
	}
}
"
`;

exports[`queries single query 1`] = `
"query {
	value: listPost {
		id
		publishedAt
		status
	}
}
"
`;

exports[`queries nested object 1`] = `
"query {
	authors: listAuthor {
		id
		name
		email
		posts {
			id
			publishedAt
			status
			tags {
				id
				name
			}
		}
	}
}
"
`;

exports[`queries nested object args 1`] = `
"query($PostWhere_0: PostWhere, $Int_1: Int) {
	authors: listAuthor {
		id
		name
		email
		posts(filter: $PostWhere_0, limit: $Int_1) {
			id
			publishedAt
			status
		}
	}
}
"
`;

exports[`queries list with args: 
			"query($AuthorWhere_0: AuthorWhere, $AuthorOrderBy_1: [AuthorOrderBy!], $Int_2: Int, $Int_3: Int) {
				authors: listAuthor(filter: $AuthorWhere_0, orderBy: $AuthorOrderBy_1, limit: $Int_2, offset: $Int_3) {
					id
					name
					email
				}
			}
			"
		 1`] = `
"query($AuthorWhere_0: AuthorWhere, $AuthorOrderBy_1: [AuthorOrderBy!], $Int_2: Int, $Int_3: Int) {
	authors: listAuthor(filter: $AuthorWhere_0, orderBy: $AuthorOrderBy_1, limit: $Int_2, offset: $Int_3) {
		id
		name
		email
	}
}
"
`;

exports[`queries get by id 1`] = `
"query($AuthorUniqueWhere_0: AuthorUniqueWhere!) {
	authors: getAuthor(by: $AuthorUniqueWhere_0) {
		id
		name
		email
	}
}
"
`;

exports[`queries top level list transform 1`] = `
[
  {
    "query": 
"query {
	authors: listAuthor {
		id
		name
		email
	}
}
"
,
    "variables": {},
  },
]
`;

exports[`queries top level get transform 1`] = `
[
  {
    "query": 
"query($AuthorUniqueWhere_0: AuthorUniqueWhere!) {
	author: getAuthor(by: $AuthorUniqueWhere_0) {
		id
		name
		email
	}
}
"
,
    "variables": {
      "AuthorUniqueWhere_0": {
        "id": "123",
      },
    },
  },
]
`;

exports[`queries nested has-many transform 1`] = `
[
  {
    "query": 
"query($AuthorUniqueWhere_0: AuthorUniqueWhere!) {
	author: getAuthor(by: $AuthorUniqueWhere_0) {
		id
		name
		email
		posts {
			id
			publishedAt
			status
		}
	}
}
"
,
    "variables": {
      "AuthorUniqueWhere_0": {
        "id": "123",
      },
    },
  },
]
`;

exports[`queries nested has-one transform 1`] = `
[
  {
    "query": 
"query($PostUniqueWhere_0: PostUniqueWhere!) {
	post: getPost(by: $PostUniqueWhere_0) {
		id
		publishedAt
		status
		author {
			id
			name
			email
		}
	}
}
"
,
    "variables": {
      "PostUniqueWhere_0": {
        "id": "123",
      },
    },
  },
]
`;

exports[`queries nested has-many-by transform 1`] = `
[
  {
    "query": 
"query($PostUniqueWhere_0: PostUniqueWhere!, $PostLocalesByLocaleUniqueWhere_1: PostLocalesByLocaleUniqueWhere!) {
	post: getPost(by: $PostUniqueWhere_0) {
		id
		publishedAt
		status
		localesByLocale(by: $PostLocalesByLocaleUniqueWhere_1) {
			id
			title
			content
		}
	}
}
"
,
    "variables": {
      "PostLocalesByLocaleUniqueWhere_1": {
        "locale": {
          "code": "en",
        },
      },
      "PostUniqueWhere_0": {
        "id": "123",
      },
    },
  },
]
`;

exports[`queries omit 1`] = `
"query {
	authors: listAuthor {
		id
		name
	}
}
"
`;
